force-app/main/default/objects/custom_create383__c/custom_create383__c.object-meta.xml
<CustomObject>
    <label>Custom created object383</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects383</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>