force-app/main/default/objects/custom_create383__c/fields/custom_create_383field580__c.field-meta.xml
<CustomField>
    <fullName>custom_create_383field580__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 383field580</label>
    <type>Checkbox</type>
</CustomField>